Remplement de l'image qui est maintenant en background image

--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -51,6 +51,7 @@ $bp2: 768px;
 	display: flex;
     flex-direction: row;
 	margin-bottom: 1rem;
+    margin-top: 1rem;
 }
 
 .logo_texte, .button_rdv {
