--- a/css/mon_site.css
+++ b/css/mon_site.css
@@ -402,6 +402,7 @@ template {
   -ms-flex-direction: row;
       flex-direction: row;
   margin-bottom: 1rem;
+  margin-top: 1rem;
 }
 
 .logo_texte, .button_rdv {
@@ -490,6 +491,13 @@ body {
   font-family: Bernina;
 }
 
+.backgroud {
+  background-image: url(../background.jpg);
+  background-position: top 0 right 50%;
+  background-size: cover;
+  height: 400px;
+}
+
 .figcap_homme {
   font-size: 150%;
   padding-left: 2%;
@@ -535,9 +543,18 @@ body {
   width: 100%;
 }
 
+@media screen and (min-width: 466px) {
+  .backgroud {
+    height: 600px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .titre_ice {
     text-align: end;
+  }
+  .backgroud {
+    height: 700px;
   }
 }
 
